--- a/src/style.css
+++ b/src/style.css
@@ -16,14 +16,16 @@ h1{
 header{
     margin-bottom: 30px;
 }
-form{
-    padding: 30px;
+.form-container{
     background-color:white;
+    margin-bottom: 30px;  
     border-radius: 10px;
-    display: flex;
+    padding: 15px 20px;
     box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
-    margin-bottom: 30px;
+}
 
+form{
+    display: flex;
 }
 .instruction{
     padding: 16px;
@@ -51,8 +53,12 @@ form{
     padding: 20px;
     line-height: 2;
     border-left: 3px solid #885df1;
-     box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.03);
+    box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.03);
+   
 
+}
+.hidden{
+ display: none;
 }
 .poem strong{
 color: #885df1;
@@ -64,4 +70,22 @@ footer{
 }
 a{
     color: #885df1 ;
+}
+/*@keyframes blink{
+    50%{
+        opacity: 0.0;
+    }
+}*/
+.generating{
+    animation: blink-animation 1s steps(5, start) infinite;
+}
+@keyframes blink-animation {
+    to {
+        visibility: hidden;
+    }
+}
+@-webkit-keyframes blink-animation{
+to {
+    visibility: hidden;
+}
 }
