--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,6 @@
 body{
     background-color: #f9f7fe;
-    font-family:  Helvetica, Arial, sans-serif;
+   font-family: "PT Sans", sans-serif
 }
 .container{
     margin: 120px auto;
@@ -12,6 +12,7 @@ h1{
     font-size: 36px;
     line-height: 1.5;
     color: #272044;
+    margin-right: 150px;
 }
 header{
     margin-bottom: 30px;
@@ -22,6 +23,9 @@ header{
     border-radius: 10px;
     padding: 15px 20px;
     box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
+}
+.form-container small{
+    color: #9b9b9b;
 }
 
 form{
